k8s/mlflow-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-server
  template:
    metadata:
      labels:
        app: mlflow-server
    spec:
      containers:
      - name: mlflow
        image: quay.io/techinea/mlflow:latest
        ports:
          - containerPort: 5000
        volumeMounts:
          - mountPath: /mlflow
            name: mlflow-storage
        args:
          - "mlflow"
          - "server"
          - "--default-artifact-root"
          - "file:///mlflow"
          - "--host"
          - "0.0.0.0"
      volumes:
        - name: mlflow-storage
          persistentVolumeClaim:
            claimName: mlflow-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
spec:
  selector:
    app: mlflow-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow-route
spec:
  to:
    kind: Service
    name: mlflow-service
  port:
    targetPort: 5000
