k8s/serve-route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: serve-model
spec:
  to:
    kind: Service
    name: serve
  port:
    targetPort: 8000
  tls:
    termination: edge
  wildcardPolicy: None
